--- a/src/components/Footer/styles.css
+++ b/src/components/Footer/styles.css
@@ -1,12 +1,10 @@
 #footer {
-  width: calc(100% - 6rem);
-  padding: 0 0 3rem;
-  margin: 3rem 3rem 0;
+  width: 100%;
+  padding: 1rem 3rem;
   display: flex;
   flex-flow: row wrap;
   justify-content: space-between;
   font-size: 14px;
-  border-top: 1px solid rgba(255, 255, 255, 0.2);
   color: rgba(255, 255, 255, 0.6);
 }
 
@@ -14,27 +12,6 @@
   position: relative;
   padding: 18px 0;
   line-height: 18px;
-}
-
-#footer .pride {
-  position: inherit;
-  margin: 0 16px 0 0;
-  width: calc(96px + 2rem);
-  display: inline-flex;
-  justify-content: flex-end;
-  font-size: 12px;
-  letter-spacing: 2px;
-  text-transform: uppercase;
-}
-
-#footer .pride::before {
-  content: ' ';
-  background: linear-gradient(90deg, #f44336 0%, #ff5722 20%, #ffeb3b 40%, #4caf50 60%, #3f51b5 80%, #9c27b0 100%);
-  position: absolute;
-  top: -19px;
-  left: 0;
-  width: calc(96px + 2rem);
-  height: 7px;
 }
 
 #footer ul {
@@ -54,9 +31,7 @@
 
 @media screen and (max-width: 600px) {
   #footer {
-    width: calc(100% - 4rem);
-    padding: 0 0 2rem;
-    margin: 2rem 2rem 0;
+    padding: 1rem 2rem;
   }
 
   #footer div {
