--- a/src/components/Items/styles.css
+++ b/src/components/Items/styles.css
@@ -1,6 +1,6 @@
 
 
-.list.inventory-items {
+.list.items {
   display: grid;
   grid-template-columns: repeat(auto-fill, 64px);
   grid-gap: 7px;
@@ -8,7 +8,7 @@
   align-items: stretch;
 }
 
-.list.inventory-items .item {
+.list.items .item {
   font-size: 14px;
   background-color: rgba(255, 255, 255, 0);
   padding-bottom: 100%;
@@ -16,14 +16,14 @@
   height: unset;
 }
 
-.list.inventory-items .item::before {
+.list.items .item::before {
   box-shadow: inset 0 0 0 2px #d6d6d6;
 }
 
 
 
 @media screen and (max-width: 600px) {
-  .list.inventory-items {
+  .list.items {
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
   }
 }
