--- a/src/views/Account/styles.css
+++ b/src/views/Account/styles.css
@@ -1,6 +1,6 @@
 #account {
   flex-basis: 100%;
-  padding: 4rem 3rem 0;
+  padding: 4rem 3rem 3rem;
   display: grid;
   grid-gap: 3rem;
   grid-template-columns: 1fr 1fr 1fr;
@@ -267,7 +267,7 @@
 @media screen and (max-width: 500px) {
   #account {
     grid-template-columns: 1fr;
-    padding: 3rem 2rem 0;
+    padding: 3rem 2rem 2rem;
     grid-gap: 2rem;
   }
 
