--- a/src/components/Items/styles.css
+++ b/src/components/Items/styles.css
@@ -16,13 +16,26 @@
   height: unset;
 }
 
+.list.items .item:hover,
+.list.items .item.not-acquired:hover {
+  background-color: rgba(255, 255, 255, 0.4);
+  color: rgba(255, 255, 255, 1);
+}
+
 .list.items .item::before {
   box-shadow: inset 0 0 0 2px #d6d6d6;
 }
 
+.list.items .item.not-acquired {
+  background-color: rgba(0, 0, 0, 0.1);
+  color: rgba(255, 255, 255, 0.4);
+}
 
+.list.items .item.not-acquired .image.dl {
+  opacity: 0.4;
+}
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 500px) {
   .list.items {
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
   }
