--- a/public/static/fonts/destiny/style.css
+++ b/public/static/fonts/destiny/style.css
@@ -1,9 +1,9 @@
 @font-face {
   font-family: 'destiny';
   src:
-    url('destiny.ttf?c8apz5') format('truetype'),
-    url('destiny.woff?c8apz5') format('woff'),
-    url('destiny.svg?c8apz5#destiny') format('svg');
+    url('destiny.ttf?rcnbis') format('truetype'),
+    url('destiny.woff?rcnbis') format('woff'),
+    url('destiny.svg?rcnbis#destiny') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -23,6 +23,12 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.destiny-inspect_dazzle_2:before {
+  content: "\e9e1";
+}
+.destiny-inspect_dazzle_1:before {
+  content: "\e9e2";
+}
 .destiny-settings:before {
   content: "\e9e0";
 }
