--- a/src/components/Tooltip/styles.css
+++ b/src/components/Tooltip/styles.css
@@ -192,6 +192,10 @@
   color: rgba(255, 255, 255, 0.8);
 }
 
+#tooltip .source.no-border {
+  border-top: none;
+}
+
 #tooltip .stats {
   padding: 14px 16px 6px;
   border-top: 1px solid rgba(255, 255, 255, 0.2);
