--- a/src/views/Resources/styles.css
+++ b/src/views/Resources/styles.css
@@ -1,32 +1,32 @@
-#tools {
+#resources {
   padding: 3rem;
   display: grid;
   grid-template-columns: repeat(5, 1fr);
 }
 
-#tools .tool .name {
+#resources .tool .name {
   font-weight: 500;
 }
 
-#tools .tool .description {
+#resources .tool .description {
   font-size: 14px;
   margin: 1rem 0 0;
 }
 
 @media screen and (max-width: 1500px) {
-  #tools {
+  #resources {
     grid-template-columns: repeat(4, 1fr);
   }
 }
 
 @media screen and (max-width: 1200px) {
-  #tools {
+  #resources {
     grid-template-columns: repeat(2, 1fr);
   }
 }
 
 @media screen and (max-width: 500px) {
-  #tools {
+  #resources {
     padding: 2rem;
     grid-template-columns: repeat(1, 1fr);
   }
