--- a/src/components/HeaderProfile/styles.css
+++ b/src/components/HeaderProfile/styles.css
@@ -39,6 +39,34 @@ html.backdropfilter #header.profile-header .braytech {
   background-color: #666;
 }
 
+#header.profile-header .background::after {
+  content: ' ';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+  opacity: 0;
+  background: linear-gradient(217deg, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0.117) 50%, rgba(255, 255, 255, 0));
+  background-repeat: no-repeat;
+  background-size: 200%;
+}
+
+@keyframes animation-update-flash {
+  0% {
+    background-position-x: 200%;
+  }
+  100% {
+    background-position-x: -200%;
+  }
+}
+
+#header.profile-header .background.update-flash::after {
+  opacity: 1;
+  animation: animation-update-flash 0.7s linear 0s 1 forwards;
+}
+
 #header.profile-header .background .image {
   background-size: cover;
   background-position: left bottom;
