--- a/src/views/Resources/styles.css
+++ b/src/views/Resources/styles.css
@@ -1,21 +1,51 @@
 #resources {
   padding: 3rem;
   display: grid;
-  grid-template-columns: repeat(5, 1fr);
+  grid-template-columns: repeat(3, 1fr);
 }
 
-#resources .tool .name {
+#resources .resource {
+  position: relative;
+  padding-bottom: 50%;
+}
+
+#resources .resource .image {
+  background-size: cover;
+}
+
+#resources .resource .properties {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  padding: 1.4rem 2rem;
+  display: grid;
+  align-content: end;
+  background: linear-gradient(rgba(255, 255, 255, 0), rgba(255, 255, 255, 0.5));
+  color: #000;
+}
+
+#resources .resource .properties .name {
+  font-size: 24px;
   font-weight: 500;
 }
 
-#resources .tool .description {
+#resources .resource .properties .description {
   font-size: 14px;
-  margin: 1rem 0 0;
+}
+
+#resources .resource a {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
 @media screen and (max-width: 1500px) {
   #resources {
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(2, 1fr);
   }
 }
 
@@ -25,9 +55,21 @@
   }
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 600px) {
   #resources {
     padding: 2rem;
     grid-template-columns: repeat(1, 1fr);
+  }
+
+  #resources .resource .properties {
+    padding: 1rem 1.2rem;
+  }
+
+  #resources .resource .properties .name {
+    font-size: 18px;
+  }
+  
+  #resources .resource .properties .description {
+    font-size: 12px;
   }
 }
