--- a/src/components/Tooltip/styles.css
+++ b/src/components/Tooltip/styles.css
@@ -440,6 +440,29 @@
   margin: 0 10px 0 0;
 }
 
+#tooltip .frame.ui.name-only .header .name {
+  margin: 0;
+}
+
+#tooltip .frame.ui.sandbox-perk .black .perk {
+  padding: 12px 16px;
+  display: grid;
+  grid-template-columns: 32px auto;
+  grid-gap: 16px;
+}
+
+#tooltip .frame.ui.sandbox-perk .black .perk .image.icon {
+  position: relative;
+  width: 32px;
+  height: 32px;
+}
+
+#tooltip .frame.ui.sandbox-perk .black .perk .description {
+  color: rgba(255, 255, 255, 0.6);
+  font-size: 14px;
+  line-height: 1.4;
+}
+
 @media screen and (max-width: 600px) {
   #tooltip {
     top: 0 !important;
