--- a/src/components/Item/styles.css
+++ b/src/components/Item/styles.css
@@ -87,6 +87,11 @@
   transition: box-shadow 0.25s;
 } */
 
+.list.items .item:hover::before {
+  box-shadow: inset 0 0 0 2px #fff;
+  background-color: rgba(255, 255, 255, 0.2);
+}
+
 .list.items .item .quantity {
   position: absolute;
   right: 0;
