--- a/src/components/Item/styles.css
+++ b/src/components/Item/styles.css
@@ -29,7 +29,11 @@
 }
 
 .list.items .item.is-masterworked::before {
-  box-shadow: inset 0 0 0 2px #e8a534;
+  box-shadow: inset 0 0 0 2px transparent;
+  background: linear-gradient(125deg, #DFBD38 30%, #FFECB9 50%, #DFBD38 70%);
+  background-size: 200%;
+  clip-path: polygon(0% 0%, 0% 100%, 2px 100%, 2px 2px, calc(100% - 2px) 2px, calc(100% - 2px) calc(100% - 2px), 2px calc(100% - 2px), 2px 100%, 100% 100%, 100% 0%);
+  animation: animation-update-flash 10s linear infinite;
 }
 
 .list.items li .list.costs {
