--- a/src/components/Records/styles.css
+++ b/src/components/Records/styles.css
@@ -100,16 +100,25 @@
 }
 
 .list.record-items li.unRedeemed {
-  background-color: rgba(90, 163, 102, 0.15);
-  box-shadow: inset 0 0 0 2px #5aa366;
+  background-color: rgba(123, 220, 193, 0.2);
+  box-shadow: inset 0 0 0 2px #7bdcc1;
 }
 
 .list.record-items li.unRedeemed .progress-bar .bar {
-  background-color: rgba(90, 163, 102, 0);
+  background-color: rgba(123, 220, 193, 0);
 }
 
 .list.record-items li.unRedeemed .progress-bar .bar .fill {
-  background-color: rgba(90, 163, 102, 0);
+  background-color: rgba(123, 220, 193, 0);
+}
+
+.list.record-items li.unRedeemed .progress-bar .check.ed::before {
+  background-color: #7bdcc1;
+}
+
+.list.record-items li.tracked {
+  background-color: rgba(90, 163, 102, 0.15);
+  box-shadow: inset 0 0 0 2px #5aa366;
 }
 
 .list.record-items li.highlight::after {
