--- a/src/components/Tooltip/styles.css
+++ b/src/components/Tooltip/styles.css
@@ -235,6 +235,10 @@
   align-items: center;
 }
 
+#tooltip .stats .stat .value.masterwork {
+  color: #c6ab3c;
+}
+
 #tooltip .stats .stat .value .bar {
   height: 100%;
   background-color: #fff;
