item objectives and stuff

--- a/src/components/Tooltip/styles.css
+++ b/src/components/Tooltip/styles.css
@@ -196,6 +196,39 @@
   border-top: none;
 }
 
+#tooltip .kill-tracker {
+  padding: 2px 16px 12px;
+  display: flex;
+}
+
+#tooltip .kill-tracker .icon {
+  position: relative;
+  width: 20px;
+  height: 20px;
+  flex-basis: 20px;
+  background-size: contain;
+}
+
+#tooltip .kill-tracker .text {
+  flex-basis: calc(100% - 20px);
+  padding: 0 0 0 16px;
+  display: flex;
+  flex-flow: row wrap;
+  align-items: center;
+  justify-content: space-between;
+  font-size: 16px;
+  line-height: 1.4;
+}
+
+#tooltip .kill-tracker .text .description {
+  color: rgba(255, 255, 255, 0.8);
+}
+
+#tooltip .kill-tracker .text .value {
+  color: #c6ab3c;
+  text-align: right;
+}
+
 #tooltip .stats {
   padding: 14px 16px 6px;
   border-top: 1px solid rgba(255, 255, 255, 0.2);
