--- a/src/components/Records/styles.css
+++ b/src/components/Records/styles.css
@@ -19,6 +19,15 @@
   box-shadow: inset 0 0 0 1px rgba(214, 214, 214, 0.4);
 }
 
+.list.record-items li .track-this {
+  position: absolute;
+  top: 0;
+  right: 2rem;
+  width: 16px;
+  height: 16px;
+  background-color: green;
+}
+
 .list.record-items li .properties {
   flex-basis: 100%;
   padding: 1rem;  
