--- a/src/components/Records/styles.css
+++ b/src/components/Records/styles.css
@@ -19,15 +19,6 @@
   box-shadow: inset 0 0 0 1px rgba(214, 214, 214, 0.4);
 }
 
-.list.record-items li .track-this {
-  position: absolute;
-  top: 0;
-  right: 2rem;
-  width: 16px;
-  height: 16px;
-  background-color: green;
-}
-
 .list.record-items li .properties {
   flex-basis: 100%;
   padding: 1rem;  
@@ -128,6 +119,121 @@
 .list.record-items li.tracked {
   background-color: rgba(90, 163, 102, 0.15);
   box-shadow: inset 0 0 0 2px #5aa366;
+}
+
+.list.record-items li.linked.tracked:hover {
+  background-color: rgba(90, 163, 102, 0.4);
+}
+
+.list.record-items li .track-this {
+  position: absolute;
+  top: -1px;
+  right: 70px;
+  width: 24px;
+  height: 24px;
+  cursor: pointer;
+  opacity: 0;
+  transition: opacity 0.25s;
+  z-index: 5;
+}
+
+.list.record-items li:hover .track-this {
+  opacity: 1;
+}
+
+.list.record-items li.tracked .track-this {
+  opacity: 1;
+}
+
+.list.record-items li .track-this::before,
+.list.record-items li .track-this div::before,
+.list.record-items li .track-this div::after {
+  content: ' ';
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  font-family: 'destiny' !important;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  font-size: 20px;
+  display: grid;
+  align-content: center;
+  justify-content: center;
+}
+
+.list.record-items li .track-this::before {
+  content: "\e9e8";
+  color: hsl(130, 29%, 60%);
+}
+
+.list.record-items li .track-this div::before {
+  left: 5px;
+  top: 4px;
+  height: 14px;
+  width: 14px;
+  border-radius: 100%;
+  background-color: hsl(130, 29%, 40%);
+}
+
+.list.record-items li .track-this div::after {
+  content: "\e9e6";
+  color: hsl(130, 29%, 60%);
+}
+
+.list.record-items li.tracked  .track-this div::after {
+  content: "\e9e6";
+  position: absolute;
+  left: 5px;
+  top: 4px;
+  height: 14px;
+  width: 14px;
+  color: hsl(130, 29%, 60%);
+  animation: animation-tracked-rotate 3s linear infinite;
+}
+
+.list.record-items li.tracked .track-this::after {
+  content: ' ';
+  position: absolute;
+  left: 5px;
+  top: 4px;
+  height: 14px;
+  width: 14px;
+  transform: scale(0);
+  animation: animation-tracked-pulse 3s linear infinite;
+  border-radius: 100%;
+  box-shadow: inset 0 0 0 0.2px #ffffff
+}
+
+@keyframes animation-tracked-pulse {
+  0% {
+    transform: scale(0);
+    opacity: 0;
+  }
+  50% {
+    transform: scale(0);
+    opacity: 0;
+  }
+  85% {
+    opacity: 1;
+  }
+  100% {
+    transform: scale(5);
+    opacity: 0;
+  }
+}
+
+@keyframes animation-tracked-rotate {
+  from {
+    transform: rotate(-360deg);
+  }
+  to {
+    transform: rotate(0deg);
+  }
 }
 
 .list.record-items li.highlight::after {
