--- a/src/components/HeaderStandard/styles.css
+++ b/src/components/HeaderStandard/styles.css
@@ -2,6 +2,14 @@
   position: sticky;
 }
 
+#header.dark-mode.read .braytech {
+  background-color: rgba(255, 255, 255, 0);
+}
+
+#header .views ul li a {
+  color: rgba(255, 255, 255, 0.6);
+}
+
 @media screen and (max-width: 1200px) {
 }
 
