--- a/src/components/Records/styles.css
+++ b/src/components/Records/styles.css
@@ -203,10 +203,11 @@
   top: 4px;
   height: 14px;
   width: 14px;
-  transform: scale(0);
   animation: animation-tracked-pulse 3s linear infinite;
   border-radius: 100%;
-  box-shadow: inset 0 0 0 0.2px #ffffff
+  background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="10" height="10"><circle cx="5" cy="5" r="5" stroke="white" stroke-width="0.2" fill="transparent" /></svg>');
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 @keyframes animation-tracked-pulse {
@@ -279,7 +280,14 @@
   }
 
 }
+
+@media screen and (max-width: 1024px) {
+
+  .list.record-items li .track-this {
+    opacity: 1;
+  }
   
+}
 
 @media screen and (max-width: 600px) {
 
