--- a/src/components/NotificationProgress/styles.css
+++ b/src/components/NotificationProgress/styles.css
@@ -77,7 +77,7 @@
 
 #notification-progress .item {
   border-top: 2px solid rgba(255, 255, 255, 0.4);
-  background: radial-gradient(ellipse farthest-corner at 50% 100%, rgba(165, 165, 165, 1) 0%, rgba(135, 135, 135, 0) 100%);
+  background: radial-gradient(ellipse farthest-corner at 50% 100%, rgba(218, 218, 218, 1) 0%, rgba(218, 218, 218, 0) 100%);
   padding: 1rem 3rem;  
   display: flex;
   flex-flow: row wrap;
@@ -140,6 +140,10 @@ html.backdropfilter #notification-progress .item {
 
 #notification-progress.record .item {
   background: radial-gradient(ellipse farthest-corner at 50% 100%, rgb(123, 220, 193) 0%, rgba(135, 135, 135, 0) 100%);
+}
+
+#notification-progress.record.lore .item {
+  background: radial-gradient(ellipse farthest-corner at 50% 100%, rgba(218, 218, 218, 1) 0%, rgba(218, 218, 218, 0) 100%);
 }
 
 
