--- a/src/components/Records/styles.css
+++ b/src/components/Records/styles.css
@@ -262,13 +262,22 @@
   margin: 0;
 }
 
-.list.record-items .all-completed .properties .text .name {
-  display: none;
+.list.record-items .none-tracked {
+  grid-column: 1/-1;
+  margin: 0 0 13px;
 }
 
-.list.record-items .all-completed .properties .text .description {
+.list.record-items .none-tracked::before {
+  box-shadow: none;
+}
+
+.list.record-items .none-tracked .properties {
+  grid-template-columns: 1fr;
+  padding: 0;
+}
+
+.list.record-items .none-tracked .properties .text {
   margin: 0;
-  padding: 1.5rem 0 1rem;
 }
 
 
