--- a/src/components/Records/styles.css
+++ b/src/components/Records/styles.css
@@ -71,11 +71,11 @@
 .list.record-items li.completed {
   background-color: rgba(207, 191, 124, 0.15);
   box-shadow: inset 0 0 0 2px rgba(207, 191, 124, 1);
-  color: rgb(221, 209, 162);
+  /* color: rgb(221, 209, 162); */
 }
 
 .list.record-items li.completed .properties .text .description {
-  color: rgba(221, 209, 162, 0.6);
+  /* color: rgba(221, 209, 162, 0.6); */
   border-top: 1px solid rgba(221, 209, 162, 0.4);
 }
 
@@ -92,11 +92,11 @@
 }
 
 .list.record-items li.linked.completed:hover {
-  background-color: rgba(207, 191, 124, 0.4);
+  background-color: rgba(207, 191, 124, 0.8);
 }
 
 .list.record-items li.linked.completed:hover .properties .text .description {
-  color: rgba(207, 191, 124, 1);
+  /* color: rgba(207, 191, 124, 1); */
 }
 
 .list.record-items li.unRedeemed {
@@ -122,7 +122,7 @@
 }
 
 .list.record-items li.linked.tracked:hover {
-  background-color: rgba(90, 163, 102, 0.4);
+  background-color: rgba(90, 163, 102, 0.6);
 }
 
 .list.record-items li .track-this {
