--- a/src/components/Roster/styles.css
+++ b/src/components/Roster/styles.css
@@ -3,12 +3,12 @@
 
 .list.roster li {
   display: grid;
-  grid-template-columns: calc(36px + 1rem) 1.2fr 1fr 1fr 1fr 2fr;
+  grid-template-columns: calc(36px + 16px) 1.2fr 1fr 1fr 1fr 2fr;
   box-sizing: content-box;
 }
 
 .list.roster.mini li {
-  grid-template-columns: calc(36px + 1rem) 1fr;
+  grid-template-columns: calc(36px + 16px) 1fr;
 }
 
 .list.roster li.grid-header div {
@@ -27,7 +27,7 @@
   content: ' ';
   position: absolute;
   top: 15px;
-  left: -1rem;
+  left: -16px;
   width: 8px;
   height: 8px;
   border-radius: 100%;
@@ -89,9 +89,9 @@
 
 .list.roster li .icon {
   position: relative;
-  height: 34px;
-  width: 34px;
-  margin: 2px 1rem 2px 2px;
+  height: 38px;
+  width: 38px;
+  margin: 0 16px 0 0;
 }
 
 .list.roster li .icon.dl {
@@ -103,7 +103,7 @@
 }
 
 .list.roster li .displayName {
-  margin: 0 1rem 0 0;
+  margin: 0 16px 0 0;
   font-size: 16px;
 }
 
@@ -174,7 +174,7 @@
 }
 
 .list.roster li.view-all {
-  padding: 0 1rem 0 calc(38px + 1rem);
+  padding: 0 16px 0 calc(38px + 16px);
   text-transform: uppercase;
   font-size: 15px;
   letter-spacing: 2px;
@@ -209,12 +209,19 @@
   /* background-color: #222; */
 }
 
+.list.roster li .memberLink {
+  position: relative;
+  padding: 0;
+  grid-column: 1/3;
+  pointer-events: none;
+}
+
 @media screen and (max-width: 1200px) {
 }
 
 @media screen and (max-width: 600px) {
   .list.roster:not(.mini) li {
-    grid-template-columns: calc(36px + 1rem) 1fr;
+    grid-template-columns: calc(36px + 16px) 1fr;
     height: unset;
   }
   .list.roster:not(.mini) li.grid-header {
