--- a/src/views/Clan/roster.css
+++ b/src/views/Clan/roster.css
@@ -1,4 +1,3 @@
-
 #clan > .roster {
   display: grid;
   padding: 4rem 3rem 3rem;
@@ -6,12 +5,10 @@
   grid-template-columns: 1.6fr 5.6fr;
 }
 
-#clan > .roster .list.roster li {
+/* #clan > .roster .list.roster li {
   border-bottom: 1px solid rgba(255, 255, 255, 0.2);
   padding-bottom: 3px;
-}
-
-
+} */
 
 #clan .roster .freshness .list li .name {
   position: absolute;
@@ -25,7 +22,7 @@
   font-size: 16px;
 }
 
-#clan .roster .freshness .list li.selected .name::before {
+/* #clan .roster .freshness .list li.selected .name::before {
   content: ' ';
   position: absolute;
   top: 0;
@@ -36,9 +33,9 @@
   border-width: 13px 13px 0 0;
   border-color: rgba(255, 255, 255, 0.8) transparent transparent transparent;
   pointer-events: none;
-}
+} */
 
-#clan .roster .freshness .list li.linked.selected  {
+#clan .roster .freshness .list li.linked.selected {
   background-color: rgba(255, 255, 255, 0);
 }
 
@@ -68,30 +65,22 @@
   opacity: 1;
 }
 
-
-
 @media screen and (max-width: 1200px) {
-
-
-
 }
 
-
 @media screen and (max-width: 600px) {
-
   #clan > .roster {
     padding: 3rem 2rem 2rem;
     grid-gap: 2rem;
     grid-template-columns: 1fr;
   }
-  
-  #clan > .roster .list.roster li:nth-child(2) {
+
+  /* #clan > .roster .list.roster li:nth-child(2) {
     padding-top: 3px;
     border-top: 1px solid rgba(255, 255, 255, 0.2);
-  }
+  } */
 
   #clan .roster .freshness {
     display: none;
   }
-
 }
