--- a/src/components/Roster/styles.css
+++ b/src/components/Roster/styles.css
@@ -2,13 +2,20 @@
 }
 
 .list.roster li {
-  display: grid;
-  grid-template-columns: calc(36px + 16px) 1.2fr 1fr 1fr 1fr 2fr;
-  box-sizing: content-box;
+  flex-flow: row wrap;
+  height: unset;
 }
 
-.list.roster.mini li {
-  grid-template-columns: calc(36px + 16px) 1fr;
+.list.roster li .basic {
+  flex-basis: 100%;
+  height: 38px;
+  display: grid;
+  align-items: center;
+  grid-template-columns: calc(38px + 16px) 1fr 120px 1.4fr 2fr;
+}
+
+.list.roster.mini li .basic {
+  grid-template-columns: calc(38px + 16px) 1fr;
 }
 
 .list.roster li.grid-header div {
@@ -19,159 +26,108 @@
 }
 
 .list.roster li.error .error {
-  grid-column: 3/6;
+  grid-column: 3/5;
 }
 
-.list.roster li.blueberry:not(.linked)::before,
-.list.roster li.blueberry:not(.linked)::after {
-  content: ' ';
+.list.roster li.thisIsYou::before {
+  content: '\e9e0';
   position: absolute;
-  top: 15px;
-  left: -16px;
-  width: 8px;
-  height: 8px;
-  border-radius: 100%;
-  background-color: #5c92e0;
-  pointer-events: none;
-}
-
-.list.roster li.blueberry:not(.linked)::before {
-  animation: animation-berry-pop 3s linear infinite;
-}
-
-@keyframes animation-berry-pop {
-  0%,
-  40% {
-    opacity: 1;
-    transform: scale(0);
-  }
-  100% {
-    opacity: 0;
-    transform: scale(10);
-  }
-}
-
-.list.roster:not(.mini) li.thisIsYou .icon::before,
-.list.roster:not(.mini) li.thisIsYou .icon::after {
-  content: ' ';
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  box-shadow: 0 0 0 1px #fff;
-  z-index: 2;
-  pointer-events: none;
-  animation: animation-thisIsYou 2.2s linear infinite;
-}
-
-.list.roster:not(.mini) li.thisIsYou .icon::after {
-  animation: animation-thisIsYou 2.2s linear infinite;
-  animation-delay: 1s;
-}
-
-@keyframes animation-thisIsYou {
-  0% {
-    opacity: 0;
-    transform: scale(1);
-  }
-  10% {
-    opacity: 0.2;
-  }
-  70% {
-    opacity: 0.4;
-  }
-  100% {
-    opacity: 0;
-    transform: scale(2);
-  }
-}
-
-.list.roster li .icon {
-  position: relative;
-  height: 38px;
-  width: 38px;
-  margin: 0 16px 0 0;
-}
-
-.list.roster li .icon.dl {
-  opacity: 0.4;
-}
-
-.list.roster li.isOnline .icon.dl {
-  opacity: 1;
-}
-
-.list.roster li .displayName {
-  margin: 0 16px 0 0;
-  font-size: 16px;
-}
-
-.list.roster li div:not(.displayName) {
-  font-size: 14px;
-  line-height: 16px;
-}
-
-.list.roster li .clanXp {
-  color: rgba(255, 255, 255, 0.4);
-}
-
-.list.roster li .clanXp span {
-  color: rgba(255, 255, 255, 0.8);
-}
-
-.list.roster li .light {
-  position: relative;
-  margin: 0 10px 0 14px;
-  font-weight: 500;
-  color: #2ed1c9;
-  display: inline-block;
-  width: 25px;
-}
-
-.list.roster li .light::before {
-  content: 'l';
-  position: absolute;
-  top: 3px;
-  left: -10px;
+  top: 12px;
+  left: -18px;
   font-family: 'destiny' !important;
-  font-size: 8px;
   font-style: normal;
   font-weight: normal;
-  font-feature-settings: normal;
   font-variant: normal;
+  font-size: 14px;
   text-transform: none;
   line-height: 1;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  z-index: 2;
+  pointer-events: none;
 }
 
-.list.roster li [class^='destiny-'] {
-  display: inline-block;
+.list.roster li .basic .icon {
+  position: relative;
+  height: 38px;
+  width: 38px;
+  margin: 0 16px 0 0;
+  background-color: rgba(255, 255, 255, 0.05);
+}
+
+.list.roster li.grid-header .basic .icon {
+  background-color: rgba(255, 255, 255, 0);
+}
+
+.list.roster li .basic .displayName {
+  margin: 0 16px 0 0;
   font-size: 16px;
-  vertical-align: -2px;
 }
 
-/* .list.roster li .destiny-class_titan {
-  color: #c94436;
+.list.roster li .basic div:not(.displayName) {
+  font-size: 14px;
+  line-height: 16px;
 }
 
-.list.roster li .destiny-class_hunter {
-  color: #5e93a0;
+.list.roster li .basic .character .stamp {
+  display: inline-flex;
+  align-content: center;
+  font-size: 12px;
+  padding: 1px 4px;
+  margin: 0 7px 0 0;
+  border-radius: 3px;
+  background-color: rgba(255, 255, 255, 0.1);
+  color: white;
 }
 
-.list.roster li .destiny-class_warlock {
-  color: #d5a52a;
-} */
+.list.roster li .basic .character .stamp.light {
+  width: 29px;
+}
 
-.list.roster li .activity time {
+.list.roster li .basic .character .stamp.light.max {
+  background-color: #2ed1c9;
+  background-color: rgba(229, 214, 97, 0.8);
+}
+
+.list.roster li .basic .character .stamp.level {
+  width: 21px;
+}
+
+.list.roster li .basic .character .stamp.class.titan {
+  background-color: #c94436;
+  background-color: rgb(75, 127, 149);
+}
+
+.list.roster li .basic .character .stamp.class.hunter {
+  background-color: #5e93a0;
+  background-color: rgb(127, 98, 76);
+}
+
+.list.roster li .basic .character .stamp.class.warlock {
+  background-color: #d5a52a;
+  background-color: rgb(42, 120, 99);
+}
+
+.list.roster li .basic .activity time {
   color: rgba(255, 255, 255, 0.4);
 }
 
-.list.roster li .activity .name {
+.list.roster li .basic .activity .name {
   display: inline-block;
   margin: 0 10px 0 0;
 }
+
+.list.roster li .detail {
+  flex-basis: 100%;
+  /* display: grid;
+  grid-template-columns: calc(36px + 16px) 1fr 120px 1.4fr 2fr; */
+}
+
+
+
+
+
+
 
 .list.roster li.view-all {
   padding: 0 16px 0 calc(38px + 16px);
@@ -201,9 +157,9 @@
   color: #fff;
 }
 
-.list.roster li .icon.black {
+/* .list.roster li .icon.black {
   background-color: rgba(255, 255, 255, 0.1);
-}
+} */
 
 .list.roster li.no-character {
   /* background-color: #222; */
@@ -215,6 +171,41 @@
   grid-column: 1/3;
   pointer-events: none;
 }
+
+.list.roster li.isExpanded {
+  background-color: rgba(255, 255, 255, 0.1);
+}
+
+.list.roster li .detail {
+  flex-basis: 100%;
+  position: relative;
+  padding: 12px 0;
+  display: grid;
+  grid-template-columns: calc(38px + 16px) 1fr 120px 1.4fr 2fr;
+}
+
+.list.roster li .detail::before {
+  content: ' ';
+  position: absolute;
+  top: -1px;
+  right: 0;
+  width: calc(100% - 38px - 16px);
+  height: 1px;
+  background-color: rgba(255, 255, 255, 0.2);
+}
+
+.list.roster li .detail ul li {
+  font-size: 14px;
+  line-height: 20px;
+  white-space: pre-wrap;
+}
+
+
+
+
+
+
+
 
 @media screen and (max-width: 1200px) {
 }
