--- a/src/components/Spinner/styles.css
+++ b/src/components/Spinner/styles.css
@@ -7,6 +7,11 @@
   pointer-events: none;
 }
 
+.spinner.mini {
+  width: 1.5rem;
+  height: 1.5rem;
+}
+
 .spinner svg {
   position: absolute;
   top: 0;
