--- a/src/views/Clan/roster.css
+++ b/src/views/Clan/roster.css
@@ -5,64 +5,14 @@
   grid-template-columns: 1.6fr 5.6fr;
 }
 
-/* #clan > .roster .list.roster li {
-  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
-  padding-bottom: 3px;
-} */
+#clan > .roster > .members {
+  position: relative;
+}
 
-#clan .roster .freshness .list li .name {
+#clan > .roster > .members .liteRefresh {
   position: absolute;
   top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  padding: 0 1rem;
-  display: flex;
-  align-items: center;
-  font-size: 16px;
-}
-
-/* #clan .roster .freshness .list li.selected .name::before {
-  content: ' ';
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 0;
-  height: 0;
-  border-style: solid;
-  border-width: 13px 13px 0 0;
-  border-color: rgba(255, 255, 255, 0.8) transparent transparent transparent;
-  pointer-events: none;
-} */
-
-#clan .roster .freshness .list li.linked.selected {
-  background-color: rgba(255, 255, 255, 0);
-}
-
-#clan .roster .freshness .list li .bg {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-image: linear-gradient(90deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.4), rgba(255, 255, 255, 0.1));
-  background-size: 200%;
-  opacity: 0;
-  transition: opacity 0.25s;
-  animation: animation-linear-background 2s linear infinite;
-}
-
-@keyframes animation-linear-background {
-  from {
-    background-position-x: 200%;
-  }
-  to {
-    background-position-x: 0%;
-  }
-}
-
-#clan .roster .freshness .list li.selected .bg {
-  opacity: 1;
+  left: -1.5rem;
 }
 
 @media screen and (max-width: 1200px) {
@@ -75,12 +25,9 @@
     grid-template-columns: 1fr;
   }
 
-  /* #clan > .roster .list.roster li:nth-child(2) {
-    padding-top: 3px;
-    border-top: 1px solid rgba(255, 255, 255, 0.2);
-  } */
-
-  #clan .roster .freshness {
-    display: none;
+  #clan > .roster > .members .liteRefresh {
+    position: absolute;
+    left: 0;
+    top: -2.5rem;
   }
 }
